# BlindVault

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING_EE.md  Dockerfile  Dockerfile.sandbox  PROGRESS.md  README.md  README_CN.md  docker-compose.override.yml  docker-compose.yml  install.sh  patch_i18n.py  patch_i18n_v2.py  patch_reversible_sanitize.py  patch_test_sanitize.py  patch_web_c.py  pyproject.toml  requirements.txt  test_prompt.py  test_retry.py  test_retry_with_secret.py
.github/workflows/: sync-community.yml
backend/: __init__.py  config.py  crypto.py  db.py  main.py  models.py  policy.py  redaction.py  redis_store.py  sanitizer.py  scheduler.py
backend/agent/: __init__.py  graph.py
backend/api/: agent.py  config.py  secrets.py  stream.py  tasks.py
backend/ee/: LICENSE  __init__.py  audit_export.py  license.py  local_model.py  micro_vm.py  sso.py
backend/tests/: conftest.py  test_agent_security.py  test_local_model.py  test_policy.py  test_redaction.py  test_scheduler.py  (+3 more)
blindvault_agent/: __init__.py  agent.py  cli.py  config.py  verify_gateway.py  verify_skeleton.py  web.py
docs/: debug-ports-and-frontend.md  litellm-gateway.md  mvp-build-plan-langgraph.md  phase2-roadmap.md  product-design-secure-agent-layer.md  task-30-reconnect-oss-features.md  task-32-configurable-rules.md  task-33-agent-config-page.md  task-40-local-model-ee.md  tasks.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  vite.config.ts
sandbox/: sandbox_agent.py
spike/: README.md  spike_1_dual_model.py  spike_2_hitl.py  spike_3_middleware.py
(+57 files in other folders)
